--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,48 @@
 version: '3.5'
 services:
   zookeeper:
-    image: zookeeper
+    image: zookeeper:latest
     container_name: zookeeper
     restart: always
     ports:
       - 2181:2181
 
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kafka
-    restart: always
+  kafka0:
+    image: wurstmeister/kafka:latest
+    container_name: kafka0
     ports:
       - 9092:9092
     environment:
       KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka0:29092,EXTERNAL://localhost:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     depends_on:
       - zookeeper
 
-  kafdrop:
-    image: obsidiandynamics/kafdrop
-    container_name: kafdrop
-    restart: always
+  kafka1:
+    image: wurstmeister/kafka:latest
+    container_name: kafka1
     ports:
-      - 9000:9000
+      - 9093:9093
     environment:
-      KAFKA_BROKERCONNECT: kafka:29092
+      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9093"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka1:29092,EXTERNAL://localhost:9093"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     depends_on:
-      - kafka
+      - zookeeper
+
+  management:
+    image: provectuslabs/kafka-ui:latest
+    container_name: management
+    ports:
+      - 8080:8080
+    environment:
+      KAFKA_CLUSTERS_0_NAME: kafka-0
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka0:29092
+      KAFKA_CLUSTERS_1_NAME: kafka-1
+      KAFKA_CLUSTERS_1_BOOTSTRAPSERVERS: kafka1:29092
+
