--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,10 +39,13 @@ services:
     image: provectuslabs/kafka-ui:latest
     container_name: management
     ports:
-      - 8080:8080
+      - 9123:9123
     environment:
+      SERVER_PORT: 9123
       KAFKA_CLUSTERS_0_NAME: kafka-0
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka0:29092
       KAFKA_CLUSTERS_1_NAME: kafka-1
       KAFKA_CLUSTERS_1_BOOTSTRAPSERVERS: kafka1:29092
+    env_file:
+      - .env
 
