--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,6 @@ services:
       - discovery.type=single-node
     ports:
       - "9200:9200"
-      - "9300:9300"
   kibana:
     image: docker.elastic.co/kibana/kibana:8.9.0
     container_name: kibana
@@ -59,7 +58,7 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka0:29092
 
   debezium:
-    image: debezium/connect:latest
+    image: pvducdev/debezium-elasticsearch
     container_name: debezium
     ports:
       - "8083:8083"
